fix alignment

--- a/src/components/crossword.module.css
+++ b/src/components/crossword.module.css
@@ -100,6 +100,7 @@
 }
 
 .number {
+  width: 2em;
   text-align: right;
   font-weight: bold;
   margin-right: 0.5rem;
